commit translated contents

--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -433,6 +433,8 @@
           href: supported-accounts-validation.md
         - name: 单租户和多租户应用
           href: single-and-multi-tenant-apps.md
+        - name: 发布者验证（预览版）
+          href: publisher-verification-overview.md
     - name: 权限和许可
       displayName: Scopes
       items:
@@ -503,6 +505,12 @@
           href: howto-configure-publisher-domain.md
         - name: 配置服务条款和隐私声明
           href: howto-add-terms-of-service-privacy-statement.md
+        - name: 为应用配置发布者验证
+          items:
+            - name: 将应用标记为“已经验证发布者”（预览版）
+              href: mark-app-as-publisher-verified.md
+            - name: 排查发布者验证问题（预览版）
+              href: troubleshoot-publisher-verification.md
     - name: 使用 Microsoft 身份验证库
       displayName: MSAL
       items:
