--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 2cc8369c59905e1d1e1b794b8cbdefce1ede0a67
-  ms.sourcegitcommit: d9cd51c3a7ac46f256db575c1dfe1303b6460d04
+  ms.openlocfilehash: 21319a3de2bcd38cd5373ac68fc1c9733ab64ee4
+  ms.sourcegitcommit: bb0afd0df5563cc53f76a642fd8fc709e366568b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/04/2020
-  ms.locfileid: "82739411"
+  ms.lasthandoff: 05/19/2020
+  ms.locfileid: "83593183"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -495,6 +495,13 @@ productDirectory:
     - compute
     - databases
     url: https://docs.microsoft.com/azure/virtual-machines/windows/sql/virtual-machines-windows-sql-server-iaas-overview?toc=%2Fazure%2Fvirtual-machines%2Fwindows%2Ftoc.json
+  - title: 静态 Web 应用
+    summary: 从 GitHub 存储库生成完整堆栈 Web 应用并将其部署到 Azure
+    imageSrc: ./media/index/static-apps.svg
+    azureCategories:
+    - compute
+    - web
+    url: static-web-apps/index.yml
   - title: 虚拟机规模集
     summary: 管理和缩放数千台 Linux 和 Windows 虚拟机
     imageSrc: https://static.docs.com/ui/media/product/azure/vm-scale-sets.svg
@@ -599,13 +606,13 @@ productDirectory:
     - databases
     - hybrid
     url: sql-database/index.yml
-  - title: Azure SQL Database Edge（预览版）
+  - title: Azure SQL Edge（预览版）
     summary: 已经过边缘优化的小型数据引擎，带有内置 AI
     imageSrc: https://static.docs.com/ui/media/product/azure/sql-database-edge.svg
     azureCategories:
     - databases
     - iot
-    url: sql-database-edge/index.yml
+    url: azure-sql-edge/index.yml
   - title: 表存储
     summary: 使用半结构化数据集的 NoSQL 键-值存储
     imageSrc: https://static.docs.com/ui/media/product/azure/storage-accounts.svg
@@ -1267,7 +1274,7 @@ additionalContent:
   sections:
   - title: 主权云
     items:
-    - title: 'Azure Government '
+    - title: Azure Government
       summary: 适用于美国政府机构及其合作伙伴的专用云。
       url: azure-government/index.yml
     - title: Azure 德国
