--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -23,6 +23,8 @@
           href: tutorial-create-store-locator.md
     - name: REST API 教程
       items:
+        - name: 创建室内地图
+          href: tutorial-creator-indoor-maps.md
         - name: 设置地理围栏
           href: tutorial-geofence.md
         - name: 空间分析
@@ -49,6 +51,12 @@
       href: azure-maps-event-grid-integration.md
     - name: 选择适当的定价层
       href: choose-pricing-tier.md
+    - name: 用于室内地图的 Creator
+      items:
+        - name: 室内地图概念
+          href: creator-indoor-maps.md
+        - name: 绘图转换错误和警告
+          href: drawing-conversion-error-codes.md
     - name: 覆盖率
       items:
         - name: 地理编码覆盖区域
@@ -73,7 +81,7 @@
       href: mobility-service-data-structure.md
     - name: 天气服务概念
       href: weather-services-concepts.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 管理 Maps 帐户
       items:
@@ -83,6 +91,8 @@
           href: how-to-manage-authentication.md
         - name: 管理定价层
           href: how-to-manage-pricing-tier.md
+        - name: 管理 Creator
+          href: how-to-manage-creator.md
         - name: 查看使用情况指标
           href: how-to-view-api-usage.md
     - name: 从 REST API 获取地图数据
@@ -201,12 +211,22 @@
           href: how-to-add-tile-layer-android-map.md
         - name: 显示交通情况数据
           href: how-to-show-traffic-android.md
+    - name: 使用 Creator 室内地图进行开发
+      items:
+        - name: 室内地图模块
+          href: how-to-use-indoor-module.md
+        - name: 室内地图的动态样式设置
+          href: indoor-map-dynamic-styling.md
+        - name: 绘图错误可视化工具
+          href: drawing-error-visualizer.md
     - name: 提供数据反馈
       href: how-to-use-feedback-tool.md
 - name: 参考
   items:
     - name: API 和参数扩展
       items:
+        - name: 绘图包要求
+          href: drawing-requirements.md
         - name: 车辆消耗模型
           href: consumption-model.md
         - name: 扩展 GeoJSON 格式
@@ -251,6 +271,8 @@
           href: 'https://docs.microsoft.com/javascript/api/azure-maps-rest/'
         - name: 空间 IO 模块
           href: 'https://docs.microsoft.com/javascript/api/azure-maps-spatial-io/'
+        - name: 室内模块
+          href: 'https://aka.ms/am-indoor-module-websdk/'
     - name: 资源管理器模板
       href: /azure/templates/microsoft.maps/accounts
 - name: 资源
@@ -287,7 +309,7 @@
       href: 'https://azure.microsoft.com/pricing/details/azure-maps'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-maps'
     - name: MSDN 论坛
       href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelbs'
