--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -138,9 +138,6 @@
       href: concept-model-management-and-deployment.md
     - name: 模型可移植性 (ONNX)
       href: concept-onnx.md
-    - name: 模型可解释性
-      displayName: explainability
-      href: how-to-machine-learning-interpretability.md
     - name: ML 管道
       href: concept-ml-pipelines.md
     - name: 企业就绪情况和安全性
@@ -172,6 +169,20 @@
           href: how-to-setup-authentication.md
         - name: 监视 Azure 机器学习
           href: monitor-azure-machine-learning.md
+    - name: 负责的 ML
+      items:
+        - name: “负责的 ML”概述
+          displayName: 'responsible,ml'
+          href: concept-responsible-ml.md
+        - name: 模型可解释性
+          displayName: explainability
+          href: how-to-machine-learning-interpretability.md
+        - name: 机器学习中的公平
+          displayName: fairness
+          href: concept-fairness-ml.md
+        - name: 差异隐私
+          displayName: 'differential,privacy'
+          href: concept-differential-privacy.md
 - name: 操作指南
   items:
     - name: 创建并管理工作区
@@ -273,6 +284,8 @@
           href: how-to-train-keras.md
         - name: PyTorch
           href: how-to-train-pytorch.md
+        - name: 强化学习
+          href: how-to-use-reinforcement-learning.md
     - name: 解释和说明模型
       displayName: interpretability
       items:
