--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -48,6 +48,8 @@
       items:
         - name: 客户管理的密钥和 Azure Key Vault
           href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+    - name: 配置网络路由首选项
+      href: ../common/network-routing-preference.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 合规性产品
       href: ../common/storage-compliance-offerings.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 开发
