--- a/articles/storsimple/TOC.yml
+++ b/articles/storsimple/TOC.yml
@@ -416,7 +416,7 @@
     - name: 营销博客
       href: 'https://blogs.technet.com/b/cis/'
     - name: Marketing
-      href: 'https://www.microsoft.com/server-cloud/products/storsimple/explore.aspx'
+      href: 'https://azure.microsoft.com/services/storsimple/'
     - name: StorSimple 支持选项
       href: storsimple-8000-support-options.md
     - name: MSDN 论坛
