--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -1026,7 +1026,7 @@
               href: /azure/databricks/security/access-control/pool-acl
               maintainContext: true
             - name: 作业访问控制
-              href: /azure/databricks/security/access-control/job-acl
+              href: /azure/databricks/security/access-control/jobs-acl
               maintainContext: true
             - name: 表访问控制
               items:
@@ -1632,7 +1632,7 @@
                     - name: 排查 Azure AD 访问令牌问题
                       href: /azure/databricks/dev-tools/api/latest/aad/troubleshoot-aad-token
                   maintainContext: true
-                - name: Azure Active Directory (Azure AD) 令牌
+                - name: Azure Active Directory 令牌
                   items:
                     - name: Azure AD 令牌身份验证概述
                       href: /azure/databricks/dev-tools/api/latest/aad/index
@@ -1676,7 +1676,7 @@
                 - name: SCIM API（用户）
                   href: /azure/databricks/dev-tools/api/latest/scim/scim-users
                 - name: SCIM API（组）
-                  href: /azure/databricks/dev-tools/api/latest/scim/scim-group
+                  href: /azure/databricks/dev-tools/api/latest/scim/scim-groups
               maintainContext: true
             - name: 机密
               href: /azure/databricks/dev-tools/api/latest/secrets
@@ -1864,20 +1864,23 @@
                 - name: 运行时版本
                   href: /azure/databricks/release-notes/runtime/releases
                   maintainContext: true
-                - name: Databricks Runtime 7.0 基因组学（Beta 版本）
-                  href: /azure/databricks/release-notes/runtime/7.0genomics
+                - name: Databricks Runtime 7.0（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/7.0
                   maintainContext: true
                 - name: Databricks Runtime 7.0 ML（Beta 版本）
                   href: /azure/databricks/release-notes/runtime/7.0ml
                   maintainContext: true
-                - name: Databricks Runtime 7.0（Beta 版本）
-                  href: /azure/databricks/release-notes/runtime/7.0
-                  maintainContext: true
-                - name: Databricks Runtime 6.6 基因组学（Beta 版本）
-                  href: /azure/databricks/release-notes/runtime/6.6genomics
+                - name: Databricks Runtime 7.0 基因组学（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/7.0genomics
                   maintainContext: true
                 - name: Databricks Runtime 6.6（Beta 版本）
                   href: /azure/databricks/release-notes/runtime/6.6
+                  maintainContext: true
+                - name: Databricks Runtime 6.6 ML（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/6.6ml
+                  maintainContext: true
+                - name: Databricks Runtime 6.6 基因组学（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/6.6genomics
                   maintainContext: true
                 - name: Databricks Runtime 6.5
                   href: /azure/databricks/release-notes/runtime/6.5
