--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -30,6 +30,8 @@
   items:
     - name: Azure 资源
       href: Concepts/azure-resources.md
+    - name: 与他人协作
+      href: Concepts/role-based-access-control.md
     - name: 设计知识库
       items:
         - name: 对于语言
@@ -107,10 +109,6 @@
     - name: 查询知识库
       href: How-To/metadata-generateanswer-usage.md
       displayName: 'isTest, test, route, request, http, post, body, header, json, metadata, top, strictFilters, GenerateAnswer, API, answer, RankerType, id, text, question, context, 200, 2xx, 400, 401, 403, 404'
-    - name: 与客户端应用程序配合使用
-      items:
-        - name: LUIS 和 QnA Maker
-          href: Tutorials/integrate-qnamaker-luis.md
     - name: 分析和遥测
       href: How-To/get-analytics-knowledge-base.md
     - name: 使用 REST API
@@ -155,6 +153,8 @@
       href: Overview/language-support.md
     - name: 限制
       href: limits.md
+    - name: 基于角色的访问控制 (RBAC)
+      href: reference-role-based-access-control.md
     - name: 疑难解答
       href: troubleshooting.md
     - name: 服务配置
