--- a/articles/governance/management-groups/toc.yml
+++ b/articles/governance/management-groups/toc.yml
@@ -7,7 +7,7 @@
       href: ../azure-management.md
     - name: 管理组
       href: ./overview.md
-- name: 操作方法指南
+- name: 操作指南
   expanded: true
   items:
     - name: 创建管理组
@@ -26,3 +26,5 @@
       href: /javascript/api/@azure/arm-managementgroups/managementgroups
     - name: REST
       href: /rest/api/resources/managementgroups
+    - name: 资源管理器模板
+      href: /azure/templates/microsoft.management/managementgroups
