--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -42,7 +42,7 @@
           href: event-hubs-storm-getstarted-receive.md
     - name: 发送和接收事件（旧版本/包）
       items:
-        - name: .NET Core (Microsoft.Azure.EventHubs)
+        - name: .NET (Microsoft.Azure.EventHubs)
           href: event-hubs-dotnet-standard-getstarted-send.md
         - name: Java (azure-eventhubs)
           href: event-hubs-java-get-started-send.md
