--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -138,7 +138,7 @@
           href: partner-topics-overview.md
         - name: Auth0
           href: auth0-overview.md
-        - name: 成为事件网格伙伴
+        - name: 成为事件网格合作伙伴
           href: partner-onboarding-overview.md
     - name: 事件域
       href: event-domains.md
